--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,12 @@
     "allowJs": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["./src/*"]
+    },
+    "strictNullChecks": true
   },
   "ts-node": {
     "compilerOptions": {
