--- a/babel.config.json
+++ b/babel.config.json
@@ -1,9 +1,15 @@
 {
   "presets": [
-    ["@babel/preset-env", {"targets": {"node": "current"}}],
-    "@babel/preset-typescript"
+    "@babel/preset-env",
+    "@babel/preset-typescript",
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ],
   "plugins": [
-    ["i18next-extract"]
+    "i18next-extract"
   ]
 }
