--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,13 +1,28 @@
-name: learn-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+name: linting, testing, building
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 jobs:
-  check-bats-version:
+  pipeline:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+    - uses: actions/checkout@v2
+    - name: Staring Node.js ${{matrix.node-version}}
+      uses: actions/setup-node@1
+      with:
+        node-version: ${{matrix.node-version}}
+    - name: install modules
+      run: npm install
+    - name: build production project
+      run: npm run build:prod
+    - name: linting typescript
+      run: npm run lint
+    - name: linting scss
+      run: lint:scss
+    - name: unit testing
+      run: npm run unit
