--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,19 +1,20 @@
 name: linting, testing, building
 on:
   push:
-    branches: [master]
+    branches: [ main ]
   pull_request:
-    branches: [master]
+    branches: [ main ]
 jobs:
   pipeline:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [18.x]
+
     steps:
       - uses: actions/checkout@v2
       - name: Staring Node.js ${{matrix.node-version}}
-        uses: actions/setup-node@1
+        uses: actions/setup-node@v1
         with:
           node-version: ${{matrix.node-version}}
       - name: install modules
